# LOOM-Train

./: .gitignore  404.html  README.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
loomtrain/core/: __init__.py  actor.py  datamodule.py  module.py  state.py  strategy.py  trainer.py  visualization.py
loomtrain/core/data/dataloader/: iter.py
loomtrain/core/data/dataset/: base.py  blended.py
loomtrain/core/device/: mesh.py
loomtrain/core/modeling/: actors.py
loomtrain/core/parallel/: parallel_state.py
loomtrain/core/parallel/context_parallel/: base.py  ring.py
loomtrain/core/strategies/data/: sort_packing.py
loomtrain/core/strategies/train/: deepspeed.py  ordinary.py
loomtrain/core/tasks/: sft.py
loomtrain/scripts/: train_sft.py
loomtrain/strategy/deepspeed/: utils.py
loomtrain/trainer/: __init__.py
scripts/: sft.py
trainer/: base.py  cdt.py  pt.py  simpo.py
utils/common/: args.py
