[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Loom-Train"
version = "0.1.0"
description = "A library for training large long context models."
authors = [
    { name="iiGray", email="iiiigray19@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"



dependencies = [
    #general
    "psutil",
    "pyyaml",
    "pandas",
    "tqdm",
    "gpustat",
    "nvitop",
    "modelscope", # load personal dataset     
    "addict",     # modelscope required
    "tabulate",


    # llm eval
    # transformers==4.46.1 #stable
    "transformers==4.51.1",
    "peft",              # lora
    # flash-attn
    # vllm==0.6.4.post1 # To run Deepseek-V3, one need vllm>=0.6.6 (based on glibc >= 2.27)
    # "vllm==0.8.3",
    "openai",                # for api calling
    "datasets",
    "accelerate",

    "nltk",                  #babilong
    "seaborn",               #babilong

    "tenacity",              #RULER  useless
    "wonderwords",           #RULER
    "nemo_toolkit[common]",  #RULER

    "rouge",                 #LongBench
    "jieba",                 #LongBench
    "fuzzywuzzy",            #LongBench
    "python-Levenshtein",

    "fastchat",              #reward-bench


    #llm train
    "deepspeed",
    "wandb",
    "chardet"
]


[tool.setuptools]
package-dir = {"" = "."} 
[tool.setuptools.packages.find]
where = [".."]
include = ["loomtrain"] 


[project.scripts]
"loomtrain-required-flash-attn" = "loomtrain.utils.help.cli.version:required_flash_attn"
